<resources>
    <string name="app_name">practiceone</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="supplier_name">Supplier name</string>
    <string name="product_sku">Product SKU</string>
    <string name="product_name">Product Name</string>
    <string name="search_results">Search Results:</string>
    <string name="order_id">Order ID:</string>
    <string name="textview">TextView</string>
    <string name="order_date">Order Date:</string>
</resources>
